--- a/src/app/components/email/email.component.css
+++ b/src/app/components/email/email.component.css
@@ -1,9 +1,13 @@
 .email{
     width: 250px;
+     font-family: Arial;
+    font-style: bold;
+    opacity: 0.2;
+
 }
 
 form{
-        display:inline-block;
+    display:inline-block;
 }
 
 .form-control{
@@ -18,21 +22,29 @@ form{
 
 button{
     font-family: Arial;
+    font-style:bold;
     color:black;
+    background-color: white;
+}
+
+button:focus {
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.2);
 }
 
 .has-danger{
     border:2px solid rgba(255,0,0, 0.4);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255,0,0, 0.4);
+    opacity:1;
 }
 
 .has-success{
     border:2px solid rgba(0, 255, 0, 0.815);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.2);
-
+    opacity:1;
 }
 
 .form-control:focus {
+  opacity: 1;
   border-color: #fff;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.2);
 }
