--- a/src/app/components/email/email.component.html
+++ b/src/app/components/email/email.component.html
@@ -1,10 +1,10 @@
 <div class="container mt-5 p-0">
   <div class="row mt-5 w-100 p-0 mr-5">
-  <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 mx-auto text-center">
+  <div class="col-6 col-sm-6  col-md-6 col-lg-6 col-xl-6 mx-auto text-center">
       <form #contact="ngForm" (ngSubmit)="onSubmit(contact.value)">
-        <div class="input-group rounded-0" [ngClass]="{ 'has-danger': email.invalid && (email.dirty || email.touched), 'has-success': email.valid
-        && (email.dirty || email.touched)}">
-          <input type="text" emailvalidator class="form-control rounded-0 text-center email" required (ngModel)="this.email" name="email"
+        <div class="input-group rounded-0">
+          <input  emailvalidator [ngClass]="{ 'has-danger': email.invalid && (email.dirty || email.touched), 'has-success': email.valid && (email.dirty ||
+          email.touched)}" type="text"  class="form-control rounded-0 text-center email" required (ngModel)="this.email" name="email"
             placeholder="ENTER EMAIL" #email="ngModel">
             <button  [disabled]="!contact.form.valid" class="btn rounded-0">Subscribe</button>
         </div>
