--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,9 @@
   <app-header></app-header>
   <div class="row mt-5">
     <div class="col-12 col-sm-12 col-md-10 col-lg-8 col-xl-6 mx-auto text-center">
-  <app-swiper></app-swiper>
+       <app-swiper></app-swiper>
     </div>
     </div>
+        <app-email></app-email>
+
 </div>
