--- a/src/app/components/email/email.component.html
+++ b/src/app/components/email/email.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5 p-0">
-  <div class="row mt-5 w-100 p-0 mr-5">
-  <div class="col-6 col-sm-6  col-md-6 col-lg-6 col-xl-6 mx-auto text-center">
+  <div class="row mt-5 w-100 m-0 p-0">
+  <div class="col-12 col-sm-6  col-md-6 col-lg-6 col-xl-4 mx-auto text-center p-0">
       <form #contact="ngForm" (ngSubmit)="onSubmit(contact.value)">
         <div class="input-group rounded-0">
           <input  emailvalidator [ngClass]="{ 'has-danger': email.invalid && (email.dirty || email.touched), 'has-success': email.valid && (email.dirty ||
