--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-5 mb-5">
+<div class="container-fluid mt-5 mb-5 p-0">
   <app-header></app-header>
   <div class="row mt-5">
     <div class="col-12 col-sm-12 col-md-10 col-lg-8 col-xl-6 mx-auto text-center">
