--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,4 @@
-/* .container {
-   height:100%;
-   width: 100%;
-   background-image:url('../assets/back.jpg');
-}    */
+.container-fluid {
+  max-height:100%;
+}   
 
