--- a/src/app/components/email/email.component.css
+++ b/src/app/components/email/email.component.css
@@ -3,7 +3,7 @@
     font-family: Arial;
     font-weight: bold;
     opacity: 0.2;
-
+    font-size:10px;
 }
 
 form{
@@ -24,6 +24,13 @@ button{
     font-family: Arial;
     color:black;
     background-color: white;
+    font-size: 16px;
+}
+
+button:disabled{
+    /* opacity: 0.1; */
+    color:white;
+    background-color: black;
 }
 
 button:focus {
