--- a/src/app/components/email/email.component.html
+++ b/src/app/components/email/email.component.html
@@ -5,7 +5,7 @@
         <div class="input-group rounded-0">
           <input  emailvalidator [ngClass]="{ 'has-danger': email.invalid && (email.dirty || email.touched), 'has-success': email.valid && (email.dirty ||
           email.touched)}" type="text"  class="form-control rounded-0 text-center email" required (ngModel)="this.email" name="email"
-            placeholder="ENTER EMAIL" #email="ngModel">
+            placeholder="ENTER EMAIL FOR INSIGHTS AND UPDATES" #email="ngModel">
             <button  [disabled]="!contact.form.valid" class="btn rounded-0">Subscribe</button>
         </div>
       </form>
