--- a/src/app/components/notfound/notfound.component.html
+++ b/src/app/components/notfound/notfound.component.html
@@ -1,3 +1,8 @@
-<p>
-  notfound works!
-</p>
+<div class="container">
+  <div class="row contact-row h-100 mb-5">
+    <div class="col-4  col-sm-4  col-md-2 col-lg-2 col-xl-2 my-auto mx-auto ">
+      <h2 class="mb-5">
+        <p class="text-center">NOT FOUND.</p>
+      </h2>
+    </div>
+  </div>
